--- a/ReactCourse/food-app/index.css
+++ b/ReactCourse/food-app/index.css
@@ -21,12 +21,45 @@
     
 }
 
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .res-card {
-    height: 300px;
     width: 200px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.res-card:hover {
+    cursor: pointer;
     border: 1px solid black;
 }
 
 .search {
     padding: 10px;
+}
+
+.res-logo {
+    width: 100%;
+    height: 130px;
+   
+}
+
+.res-name {
+    margin-top: 3px;
+   
+
+}
+
+.res-cusisines {
+    margin-top: 0px;
+    width: 100%;
+   
+}
+
+.res-rating {
+    margin-top: 0px;
+   
 }
