--- a/ReactCourse/food-app/index.css
+++ b/ReactCourse/food-app/index.css
@@ -69,3 +69,19 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 5px;
+    padding: 5px;
+    height: 250px;
+    width: 200px;
+}
+
+.filter {
+    display: flex;
+}
