--- a/ReactCourse/food-app/index.css
+++ b/ReactCourse/food-app/index.css
@@ -1,93 +1,3 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.logo {
-    height: 150px;
-    width: 150px;
-}
-
-.nav-items > ul {
-    font-size: 34px;
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-    
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card {
-    width: 200px;
-    padding: 5px;
-    margin: 5px;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.search {
-    padding: 10px;
-}
-
-.res-logo {
-    width: 100%;
-    height: 130px;
-   
-}
-
-.res-name {
-    margin-top: 3px;
-   
-
-}
-
-.res-cusisines {
-    margin-top: 0px;
-    width: 100%;
-   
-}
-
-.res-rating {
-    margin-top: 0px;
-   
-}
-
-.filter-btn {
-    margin: 5px;
-    padding: 5px;
-    cursor: pointer;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card {
-    margin: 5px;
-    padding: 5px;
-    height: 250px;
-    width: 200px;
-}
-
-.filter {
-    display: flex;
-}
-
-.user-card {
-    margin: 5px;
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
